@@ -5,6 +5,10 @@
 
  * Use python's json module instead of simplejson
  * Use mpd's "setvol" command instead of the deprecated "volume"
+ * Skipping the current song would lead to interruptions in the audio stream
+   if it was the last entry in the playlist. Fixed this by auto-queuing before
+   skipping tracks. Thanks to Artem Savkov for noticing this and providing a
+   patch.
 
 == 0.6.0 (30 Apr 2011) ==
 
